--- a/css/styles.css
+++ b/css/styles.css
@@ -612,10 +612,13 @@ span.ss_text {
 
 .subheader_line {
 	background: url(../img/subheader_line.png) no-repeat;
-	width: 348px;
+	width: 100px;
 	height: 8px;
-	margin: 0 10px 5px 10px;
 	display: inline-block;
+	margin-top: 0;
+	margin-right: 10px;
+	margin-bottom: 5px;
+	margin-left: 10px;
 }
 
 .contact_form h4 {
