--- a/css/styles.css
+++ b/css/styles.css
@@ -330,6 +330,12 @@ span.ss_text {
 	height: 120px;
 	margin-left: 80px;
 }
+.screenshot12 {
+	background: url(../img/screenshot12.png) no-repeat;
+	width: 160px;
+	height: 120px;
+	margin-left: 80px;
+}
 .ss {
 	-webkit-box-shadow: 0px 0px 0px 1px #d9d7d7;
 	-moz-box-shadow: 0px 0px 0px 1px #d9d7d7;
@@ -369,7 +375,7 @@ span.ss_text {
 
 #publications {
 	width: 100%;
-	height: 2400px;
+	height: 2450px;
 	background-color: #fff;
 	position: relative;
 	z-index: 400;
